# github-stars

./: Makefile  README.md  constants.py  github_stars.py  pyproject.toml  test_github_stars.py  tox.ini
github_stars/: __init__.py  api.py  constants.py
tests/: test_github_stars.py
